--- a/assets/application.css
+++ b/assets/application.css
@@ -1,6 +1,9 @@
-svg {
-  background-color: rgba(0,0,0.3);
+.navbar {
+  width: 100%;
+  display: flex;
 }
+
+
 /* 
 .hover path {
   stroke: #555;
@@ -10,11 +13,20 @@ svg {
   fill: #555;
 } */
 
-.hover g.primary text {
+.arc.hover g.primary text {
+  fill: black;
+  font-weight: bold;
+}
+
+.arc.hover g.secondary text {
+  fill: #333;
+}
+
+.force hover g.primary text {
   fill: #fff;
   font-weight: bold;
 }
 
-.hover g.secondary text {
+.force.hover g.secondary text {
   fill: #ccc;
 }
