--- a/assets/application.css
+++ b/assets/application.css
@@ -13,14 +13,22 @@
   fill: #555;
 } */
 
+.main-content {
+  display: flex;
+}
+.arc.hover g.excluded text {
+  fill: #ccc;
+}
+
 .arc.hover g.primary text {
   fill: black;
   font-weight: bold;
 }
 
 .arc.hover g.secondary text {
-  fill: #333;
+  fill: #222;
 }
+
 
 .force hover g.primary text {
   fill: #fff;
