--- a/assets/default.scss
+++ b/assets/default.scss
@@ -94,6 +94,18 @@ strong{
   font-weight: 600;
 }
 
+
+
+ul {
+  margin-top: 5px;
+  padding-left: 15px;
+}
+
+h3 {
+  font-size: 18px;
+  color: #333;
+  margin-top: 5px;
+}
 // li {
 //   // font-size: ;
 //   // list-style: inside url("../assets/images/plane-solid.svg");
