--- a/assets/application.scss
+++ b/assets/application.scss
@@ -7,8 +7,13 @@
   display: flex;
 }
 
-.navbar .logo{
-  width: 20%;
+.left {
+  width: 80%;
+  display: flex;
+}
+
+.logo{
+  width: 30%;
   height: 70px;
   background-position: center;
   background-image: url("../assets/images/logo.svg");
@@ -17,12 +22,29 @@
   margin-right: 20px;
 }
 
-.navbar i{
-  margin-top: 3px;
+.main-content, .right, .profile-link {
+  display: flex;
 }
 
-.main-content {
-  display: flex;
+.right{
+  width: 20%;
+  padding-right: 20px;
+}
+
+.profile-link{
+  justify-content: flex-end;
+  width: 100%;
+}
+
+.profile-link span{
+  padding: 25px 10px;
+  font-weight: 600;
+}
+
+.icon{
+  margin: 25px 5px;
+  width: 22px;
+  height: 22px;
 }
 
 .arc.hover g.excluded text {
@@ -48,12 +70,12 @@
   fill: #ccc;
 }
 
-.right {
+.right-content {
   width: 40%;
   padding: 0 20px;
 }
 
-.right h2{
+.right-content h2{
   font-size: 24px;
   font-weight: bold;
 }
