--- a/assets/default.scss
+++ b/assets/default.scss
@@ -1,4 +1,4 @@
-html{
+html {
   font-size: 16px;
   background-color: #fff;
 }
@@ -9,23 +9,26 @@ body {
   line-height: 1.42;
   color: #333333;
   -webkit-font-smoothing: antialiased;
-};
+}
 
-h1, h2, h3, h4{
-    margin-top: 15px;
-    margin-bottom: 11px;
-    font-weight: 700;
-    line-height: 1;
-};
+h1,
+h2,
+h3,
+h4 {
+  margin-top: 15px;
+  margin-bottom: 11px;
+  font-weight: 700;
+  line-height: 1;
+}
 
-h1{
+h1 {
   display: block;
   // font-size: 1.5em;
   margin-block-start: 0.83em;
   margin-block-end: 0.83em;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
-};
+}
 
 * {
   box-sizing: border-box;
@@ -35,38 +38,38 @@ div {
   box-sizing: border-box;
 }
 
-.form-control{
-    box-sizing: border-box;
-    border-radius: 4px;
-    border: solid 1px #333333;
-    padding: 8px;
-    font-size: 16px;
-    color: #555555;
-    -webkit-appearance: button;
-    margin: 8px 0;
-    cursor: pointer;
+.form-control {
+  box-sizing: border-box;
+  border-radius: 4px;
+  border: solid 1px #333333;
+  padding: 8px;
+  font-size: 16px;
+  color: #555555;
+  -webkit-appearance: button;
+  margin: 8px 0;
+  cursor: pointer;
 }
 
-.main-content{
+.main-content {
   display: flex;
   justify-content: center;
 }
 
-.special-buttons-2{
-    width: 30%;
-    background-color: #40d9ac;
-    border: 3px solid #40d9ac;
-    font-size: 18px;
-    font-weight: 500;
-    margin: 10px 15px; 
-    border-radius: 2px; 
-    padding: 10px 12px;
-    color: #fff;
+.special-buttons-2 {
+  width: 30%;
+  background-color: #40d9ac;
+  border: 3px solid #40d9ac;
+  font-size: 18px;
+  font-weight: 500;
+  margin: 10px 15px;
+  border-radius: 2px;
+  padding: 10px 12px;
+  color: #fff;
 }
 
-.special-buttons-2:hover{
-    background-color: #fff;
-    color: #40d9ac;
+.special-buttons-2:hover {
+  background-color: #fff;
+  color: #40d9ac;
 }
 
 a {
@@ -77,18 +80,18 @@ span.icon {
   font-size: 24px;
 }
 
-.space-between{
-    width: 100%;
-    display: flex;
-};
+.space-between {
+  width: 100%;
+  display: flex;
+}
 
-.space-between{
+.space-between {
   display: flex;
   justify-content: space-between;
   margin: 5px 0;
 }
 
-strong{
+strong {
   font-weight: 600;
 }
 
@@ -103,6 +106,7 @@ h3 {
   margin-top: 5px;
 }
 
-input[type="checkbox"], label{
+input[type="checkbox"],
+label {
   cursor: pointer;
 }
